Medio implementado el cuadro con el video en pantalla final

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Pantalla1" />
+        <activity android:name=".Settings" />
+        <activity android:name=".PantallaFinal"></activity>
     </application>
 
 </manifest>
