commit principio clase 01/12/15
- añadida pantalla de batalla
- añadidas páginas como activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Pantalla1" />
+        <activity android:name=".Battle1" />
+        <activity android:name=".Pantalla2" />
+        <activity android:name=".Pantalla3"></activity>
     </application>
 
 </manifest>
